upgrade article and articles pages

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -546,10 +546,10 @@ video {
 }
 
 :root {
-  --bg: 255 255 255;
+  --bg: 240 240 240;
   --bg-active: 233 233 233;
   --bg-secondary: 52 58 64;
-  --bg-accent: 244 244 244;
+  --bg-accent:  250 250 250;
   --text-secondary: 128 128 128;
   --text-secondary-active: 255 255 255;
   --border: 212 212 212;
@@ -653,6 +653,10 @@ video {
 
 .visible {
   visibility: visible;
+}
+
+.invisible {
+  visibility: hidden;
 }
 
 .\!collapse {
@@ -779,6 +783,10 @@ video {
   float: inline-end;
 }
 
+.float-left {
+  float: left;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -844,6 +852,10 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.-ml-6 {
+  margin-left: -1.5rem;
 }
 
 .mb-0 {
@@ -1026,6 +1038,10 @@ video {
   min-height: 100vh;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-4 {
   width: 1rem;
 }
@@ -1056,6 +1072,10 @@ video {
 
 .min-w-fit {
   min-width: fit-content;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .max-w-screen-2xl {
@@ -1092,6 +1112,14 @@ video {
 
 .grow {
   flex-grow: 1;
+}
+
+.table-auto {
+  table-layout: auto;
+}
+
+.border-collapse {
+  border-collapse: collapse;
 }
 
 .translate-y-0 {
@@ -1394,6 +1422,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .overflow-y-visible {
   overflow-y: visible;
 }
@@ -1528,6 +1560,11 @@ video {
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .border-green-500 {
@@ -1848,6 +1885,21 @@ video {
 
 .align-middle {
   vertical-align: middle;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-base {
@@ -2558,6 +2610,10 @@ div.advertisement-div > div:not(.report-link) {
   --tw-ring-opacity: 0.5;
 }
 
+.group:hover .group-hover\:visible {
+  visibility: visible;
+}
+
 @media (min-width: 640px) {
   .sm\:col-span-1 {
     grid-column: span 1 / span 1;
@@ -2737,6 +2793,10 @@ div.advertisement-div > div:not(.report-link) {
     display: none;
   }
 
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .md\:w-1\/4 {
     width: 25%;
   }
@@ -2832,6 +2892,10 @@ div.advertisement-div > div:not(.report-link) {
     display: none;
   }
 
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
   .lg\:max-w-screen-lg {
     max-width: 1024px;
   }
@@ -2858,6 +2922,21 @@ div.advertisement-div > div:not(.report-link) {
 
   .lg\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .lg\:text-base {
@@ -2946,6 +3025,10 @@ div.advertisement-div > div:not(.report-link) {
 
   .xl\:hidden {
     display: none;
+  }
+
+  .xl\:w-1\/6 {
+    width: 16.666667%;
   }
 
   .xl\:max-w-screen-xl {
