--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -554,6 +554,7 @@ video {
   --text-secondary-active: 255 255 255;
   --border: 212 212 212;
   --border-active : 180 180 180;
+  --border-secondary: 187 187 187;
   --text: 33 37 41;
   --link: 0 123 255;
   --link-active: 0 86 179;
@@ -572,6 +573,14 @@ video {
   --article : 116 198 135;
   --podcast: 64 154 191;
   --video: 254 66 66;
+  --card-white: 255 255 235;
+  --card-blue:  212 237 255;
+  --card-black: 214 204 214;
+  --card-red: 255 200 200;
+  --card-green: 233 255 212;
+  --card-multi: 252 248 169;
+  --card-colorless: 233 231 235;
+  --card-lands: 255 224 192;
 }
 
 :root[class~="dark"] {
@@ -583,6 +592,7 @@ video {
   --text-secondary-active: 255 255 255;
   --border: 45 51 56;
   --border-active: 17 12 16;
+  --border-secondary: 129 140 150;
   --text: 255 255 255;
   --link: 50 166 255;
   --link-active: 0 86 179;
@@ -601,6 +611,14 @@ video {
   --article: 116 198 135;
   --podcast: 64 154 191;
   --video: 254 66 66;
+  --card-white: 95 95 75;
+  --card-blue: 52 77 95;
+  --card-black: 69 63 82;
+  --card-red: 95 56 68;
+  --card-green: 73 95 52;
+  --card-multi: 92 88 9;
+  --card-colorless: 60 58 64;
+  --card-lands: 95 58 36;
 }
 
 .container {
@@ -775,10 +793,6 @@ video {
   grid-column: span 9 / span 9;
 }
 
-.float-start {
-  float: inline-start;
-}
-
 .float-end {
   float: inline-end;
 }
@@ -793,6 +807,10 @@ video {
 
 .m-2 {
   margin: 0.5rem;
+}
+
+.m-4 {
+  margin: 1rem;
 }
 
 .-mx-4 {
@@ -813,11 +831,6 @@ video {
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
-}
-
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
 }
 
 .mx-4 {
@@ -919,12 +932,12 @@ video {
   margin-left: 0.5rem;
 }
 
-.ml-auto {
-  margin-left: auto;
+.ml-4 {
+  margin-left: 1rem;
 }
 
-.mr-1 {
-  margin-right: 0.25rem;
+.ml-auto {
+  margin-left: auto;
 }
 
 .mr-2 {
@@ -975,10 +988,6 @@ video {
   margin-top: auto;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
 .block {
   display: block;
 }
@@ -1015,16 +1024,20 @@ video {
   height: 2.5rem;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
 .h-4 {
   height: 1rem;
 }
 
 .h-6 {
   height: 1.5rem;
-}
-
-.h-8 {
-  height: 2rem;
 }
 
 .h-full {
@@ -1063,6 +1076,14 @@ video {
   width: 50%;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
 .w-4 {
   width: 1rem;
 }
@@ -1073,10 +1094,6 @@ video {
 
 .w-64 {
   width: 16rem;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .w-96 {
@@ -1205,6 +1222,10 @@ video {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -1219,6 +1240,10 @@ video {
 
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
+.grid-cols-8 {
+  grid-template-columns: repeat(8, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -1624,6 +1649,11 @@ video {
   border-color: transparent;
 }
 
+.border-border-secondary {
+  --tw-border-opacity: 1;
+  border-color: rgb(var(--border-secondary) / var(--tw-border-opacity));
+}
+
 .bg-advert {
   --tw-bg-opacity: 1;
   background-color: rgb(var(--advert) / var(--tw-bg-opacity));
@@ -1682,6 +1712,46 @@ video {
 .bg-button-secondary-active {
   --tw-bg-opacity: 1;
   background-color: rgb(var(--button-secondary-active) / var(--tw-bg-opacity));
+}
+
+.bg-card-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--card-black) / var(--tw-bg-opacity));
+}
+
+.bg-card-blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--card-blue) / var(--tw-bg-opacity));
+}
+
+.bg-card-colorless {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--card-colorless) / var(--tw-bg-opacity));
+}
+
+.bg-card-green {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--card-green) / var(--tw-bg-opacity));
+}
+
+.bg-card-lands {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--card-lands) / var(--tw-bg-opacity));
+}
+
+.bg-card-multi {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--card-multi) / var(--tw-bg-opacity));
+}
+
+.bg-card-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--card-red) / var(--tw-bg-opacity));
+}
+
+.bg-card-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--card-white) / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -1802,11 +1872,6 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .px-8 {
@@ -2012,6 +2077,11 @@ video {
   color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
+.text-border {
+  --tw-text-opacity: 1;
+  color: rgb(var(--border) / var(--tw-text-opacity));
+}
+
 .text-button-accent {
   --tw-text-opacity: 1;
   color: rgb(var(--button-accent) / var(--tw-text-opacity));
@@ -2105,11 +2175,6 @@ video {
 .text-yellow-800 {
   --tw-text-opacity: 1;
   color: rgb(133 77 14 / var(--tw-text-opacity));
-}
-
-.text-border {
-  --tw-text-opacity: 1;
-  color: rgb(var(--border) / var(--tw-text-opacity));
 }
 
 .placeholder-text-secondary::placeholder {
@@ -2789,6 +2854,10 @@ img.mana-symbol-sm {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -2803,6 +2872,10 @@ img.mana-symbol-sm {
 
   .sm\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
   }
 
   .sm\:text-sm {
@@ -2893,6 +2966,10 @@ img.mana-symbol-sm {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -2907,6 +2984,10 @@ img.mana-symbol-sm {
 
   .md\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
   }
 }
 
@@ -2988,6 +3069,10 @@ img.mana-symbol-sm {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -3002,6 +3087,10 @@ img.mana-symbol-sm {
 
   .lg\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
   }
 
   .lg\:text-2xl {
@@ -3123,6 +3212,10 @@ img.mana-symbol-sm {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
+  .xl\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .xl\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -3137,6 +3230,10 @@ img.mana-symbol-sm {
 
   .xl\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
   }
 }
 
@@ -3214,6 +3311,10 @@ img.mana-symbol-sm {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
+  .\32xl\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .\32xl\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -3228,6 +3329,10 @@ img.mana-symbol-sm {
 
   .\32xl\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .\32xl\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
   }
 }
 
