fix cube preview image centering

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1473,6 +1473,10 @@ video {
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.self-center {
+  align-self: center;
+}
+
 .overflow-auto {
   overflow: auto;
 }
