--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -805,6 +805,10 @@ video {
   margin: 0px;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .m-2 {
   margin: 0.5rem;
 }
@@ -937,10 +941,6 @@ video {
 
 .mr-4 {
   margin-right: 1rem;
-}
-
-.ms-1 {
-  margin-inline-start: 0.25rem;
 }
 
 .ms-2 {
@@ -1788,6 +1788,11 @@ video {
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .bg-gray-800 {
@@ -3386,3 +3391,4 @@ img.mana-symbol-sm {
     max-width: 1920px;
   }
 }
+
